Testsuite/ManualTests/3589/3589.c.gcov
        -:    0:Source:3589.c
        -:    0:Graph:3589.gcno
        -:    0:Data:3589.gcda
        -:    0:Runs:1
        -:    1:/* PR middle-end/53580 */
        -:    2:/* { dg-do compile } */
        -:    3:/* { dg-options "-fopenmp" } */
        -:    4:
        1:    5:int main() {
        1:    6:  int x, y, v = 0;
        -:    7:
        -:    8:#pragma omp parallel
        -:    9:#pragma omp for
       11:   10:  for (x = 0; x < 10; x++) {
        -:   11:#pragma omp for reduction(+: v)	/* { dg-error "work-sharing region may not be closely nested inside of work-sharing" } */
      110:   12:    for (y = 0; y < 10; y++)
      100:   13:      v++;
        -:   14:  }
        1:   15:  return v - 100;
        -:   16:}
